# barqs

./: 2024-07-29_jyun.ipynb  README.md  pyproject.toml  scratch.ipynb
analysis/: 2024-07-29_HTO.py  2024-09-18_HSC_OLIGO_HASH.py
examples/: dumb.py
src/: _io_utils.py  barqs.py  fasta.py  fastq.py
tests/: test_barqs.py  test_fastq.py
tests/test_data/: small.fastq
