[project]
name = "barqs"
version = "0.1.0"
description = "The barcode quantifier with bite!"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "David Collins", email = "dcollins@nygenome.org"}]
requires-python = ">=3.9"
dependencies = []

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]
version = "0.1.0"

[tool.pixi.dependencies]
python = "3.12"
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pyright = "*"
pytest = "*"

[tool.pixi.pypi-dependencies]
barqs = { path = ".", editable = true }

[tool.pixi.tasks]
isort = "isort src/ tests/"
black = "black src/ tests/"
pre-commit = "pre-commit run --all --show-diff-on-failure"
pyright = "pyright src/ tests/"
flake8 = "flake8 src/ tests/"
pytest = "pytest tests/"
pre-merge = { depends-on = ["isort", "black", "pyright", "flake8"] }

[tool.isort]
profile = "black"
float_to_top = "True"
